adição de cadastro de consulta